# chesspgnparser

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  cloudbuild.yaml  makefile  pgndataparer.cpp  pgnsample.pgn
.devcontainer/: devcontainer.json
data/: pgnsample.pgn.zst
google-cloud-sdk/.install/: bundled-python3-unix-linux-x86_64.snapshot.json  bundled-python3-unix.snapshot.json  gcloud-crc32c-linux-x86_64.snapshot.json  gcloud-deps-linux-x86_64.snapshot.json
src/: pgndataparer.cpp
test/: test.cpp
